tests/ui/parser/recover/recover-field-semi.stderr
error: struct fields are separated by `,`
  --> $DIR/recover-field-semi.rs:2:13
   |
LL | struct Foo {
   |        --- while parsing this struct
LL |     foo: i32;
   |             ^
   |
help: replace `;` with `,`
   |
LL |     foo: i32,
   |             ~

error: union fields are separated by `,`
  --> $DIR/recover-field-semi.rs:7:13
   |
LL | union Bar {
   |       --- while parsing this union
LL |     foo: i32;
   |             ^
   |
help: replace `;` with `,`
   |
LL |     foo: i32,
   |             ~

error: struct fields are separated by `,`
  --> $DIR/recover-field-semi.rs:12:19
   |
LL |     Qux { foo: i32; }
   |     ---           ^
   |     |
   |     while parsing this struct
   |
help: replace `;` with `,`
   |
LL |     Qux { foo: i32, }
   |                   ~

error: unions cannot have zero fields
  --> $DIR/recover-field-semi.rs:6:1
   |
LL | / union Bar {
LL | |     foo: i32;
LL | |
LL | | }
   | |_^

error: aborting due to 4 previous errors

